environments/gloo-gateway/gateway-api/live/uptime-app/base/uptime-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  #labels:
  #  istio.io/rev: 1-23
  name: uptime
