environments/gloo-gateway/gateway-api/live/uptime-app/base/uptime.yaml
# Source: uptime/templates/common.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime
  namespace: uptime
  labels:
    app.kubernetes.io/instance: uptime
    app.kubernetes.io/name: uptime
    app.kubernetes.io/version: 1.21.2
spec:
  type: ClusterIP
  ports:
  - port: 3001
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: uptime
    app.kubernetes.io/instance: uptime
---
# Source: uptime/templates/common.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime
  namespace: uptime
  labels:
    app: uptime
    app.kubernetes.io/instance: uptime
    app.kubernetes.io/name: uptime
    app.kubernetes.io/version: 1.21.2
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: uptime
      app.kubernetes.io/instance: uptime
  template:
    metadata:
      labels:
        app.kubernetes.io/name: uptime
        app.kubernetes.io/instance: uptime
      annotations:
        proxy.istio.io/config: '{ "holdApplicationUntilProxyStarts": true }'
    spec:  
      #nodeSelector:
      #  node: "spot"
      #tolerations:
      #- key: cloud.google.com/node
      #  operator: Equal
      #  value: "spot"
      #  effect: NoSchedule
      serviceAccountName: uptime
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: uptime
          image: "louislam/uptime-kuma:1.21.2"
          resources:
            requests:
              memory: "150Mi"
              cpu: "20m"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3001
              protocol: TCP
          volumeMounts:
            - name: uptime
              mountPath: /app/data
          livenessProbe:
            tcpSocket:
              port: 3001
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 3001
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 3001
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
      volumes:
      - name: uptime
        persistentVolumeClaim:
          claimName: uptime
