environments/gloo-gateway/gateway-api/live/uptime-app/base/uptime-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: uptime
  namespace: uptime
spec:
  hostnames:
  - "uptime.glooplatform.com"
  parentRefs:
    - name: https
      namespace: gloo-system
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      - path:
          type: PathPrefix
          value: /callback
      backendRefs:
        - name: uptime
          port: 3001
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.solo.io
          kind: RouteOption
          name: uptime-route-policies
